--- a/produce.html
+++ b/produce.html
@@ -12,9 +12,11 @@
     <p><a href="index.html"><h2>Go Back</h2></a></p>
     <ul>
 <p><center><h1><a href="layout.html">Cube</h1></p>
-<img src="500_012902_main_or_1.jpg"></a>
+    <img src="500_012902_main_or_1.jpg"></a>
 <p><h1><a href="layout.html">Rectangular Prism</p></h1>
-<img src="Y9_2a_2.png"></a>
+    <img src="Y9_2a_2.png"></a>
+<p><center><h1><a href="layout.html">Triangular Prism</h1></p>
+    <img src="tripris.png"></a>
 </ul></center>
     
 </body>
