--- a/produce.html
+++ b/produce.html
@@ -15,9 +15,12 @@
     <img src="500_012902_main_or_1.jpg"></a>
 <p><h1><a href="layout.html">Rectangular Prism</p></h1>
     <img src="Y9_2a_2.png"></a>
-<p><center><h1><a href="layout.html">Triangular Prism</h1></p>
+<p><h1><a href="layout.html">Triangular Prism</h1></p>
     <img src="tripris.png"></a>
+<p><center><h1><a href="layout.html">Pyramid</h1></p>
+    <img src="274-2743316_24-images-of-solid-pyramid-shape-template-cone-pyramid-3d-shapes.png"></a>
 </ul></center>
+
     
 </body>
 </html>
