--- a/Classwork/index.html
+++ b/Classwork/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pong!</title>
-    <style>
-      body {
-        margin: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <script src="lib/p5.js"></script>
-    <script src="pong.js"></script>
-    <script src="p5-app.js"></script>
-  </body>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Rhett's Projects</title>
+</head>
+
+    <body>
+        <header><h1>Rhett's Prjects</h1>
+         Search<input></input>
+        </header>
+        <main>
+            <nav><center> <a href="p5-p.html">
+                <p><h2>Pong!</h2></p></a>
+                <a href="cardy/cuj.html">
+                <p><h3>Card Game</h3></p> </a>
+                <a href="p5/index.html">
+                <p><h3>Drawings/Animations</h3></p> </a></center>
+            </nav>
+            <article><p><h2>Welcome to my projects!</h2></p></article>
+            <aside></aside>
+        </main>
+    </body>
 </html>
