--- a/index.html
+++ b/index.html
@@ -6,27 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Geometry</title>
+    <title>Rhett's Projects</title>
 </head>
 
     <body>
-    
-
-        <header><h1>Geometry3D</h1>
+        <header><h1>Rhett's Prjects</h1>
          Search<input></input>
         </header>
         <main>
-            <nav><center> <a href="archive.html">
-                <p><h2>About</h2></p></a>
-                <a href="produce.html">
-                <p><h3>Products</h3></p> </a></center>
+            <nav><center> <a href="Classwork/p5-p.html">
+                <p><h2>Pong!</h2></p></a>
+                <a href="Classwork/cardy/cuj.html">
+                <p><h3>Card Game</h3></p> </a>
+                <a href="Classwork/p5/index.html">
+                <p><h3>Drawings/Animations</h3></p> </a></center>
             </nav>
-            <article><p><h2>These geometric shapes are the most accurate on the market, and are resonably priced as well!</h2></p></article>
+            <article><p><h2>Welcome to my projects!</h2></p></article>
             <aside></aside>
         </main>
-        <footer>
-            <center>  <img src="500_012902_main_or_1.jpg"></center>
-        </footer>
-   
     </body>
 </html>
