--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
     <body>
-        <header><h1>Rhett's Prjects</h1>
+        <header><h1>Rhett's Projects</h1>
          Search<input></input>
         </header>
         <main>
