--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
          Search<input></input>
         </header>
         <main>
-            <nav><center> <a href="Classwork/p5-p.html">
+            <nav><center> <a href="Classwork/intro.html">
                 <p><h2>Pong!</h2></p></a>
                 <a href="Classwork/cardy/cuj.html">
                 <p><h3>Card Game</h3></p> </a>
-                <a href="Classwork/p5/index.html">
+                <a href="Classwork/p5/p5-index.html">
                 <p><h3>Drawings/Animations</h3></p> </a></center>
             </nav>
             <article><p><h2>Welcome to my projects!</h2></p></article>
